# medicareAIproject

./: .gitignore  README.md  package-lock.json
Backend/: main.py
Backend/routes/: chat.py  summary.py  upload.py
Backend/services/: clinical_summarizer.py  consistency.py  groq_client.py  patient_simplifier.py  summary_pipeline.py  text_extractor.py
Frontend/: package-lock.json  package.json
Frontend/src/: main.jsx
Frontend/src/components/: ChatPanel.jsx  Disclaimer.jsx  FileUpload.jsx  ModeToggle.jsx  SummaryCard.jsx
Frontend/src/context/: ModeContext.jsx
Frontend/src/pages/: Home.jsx
Frontend/src/services/: api.js
backend/: pyproject.toml
frontend/: index.html
